Fix z-index and email

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ ul{
   padding-right: 70px !important;
   padding-top: 130px;
   padding-left: 10vw !important;
-  z-index: 10000;
+  z-index: 4;
 }
 
 
